# intcode

./: .clangd  .gitignore  CMakeLists.txt  README.md  test.sh
src/color/: color.cpp  color.h
src/day2/: main.a.cpp  main.a.cxx  main.b.cpp
src/day5/: main.a.cpp
src/intcode/: color.cpp  inst.cpp  inst.h  intcode.h  interp.cpp  interp.h  io.cpp  io.h  lib.cxx  prog.cpp  prog.h
src/run/: main.cpp  slice.cpp
tests/: examples.cpp  inst.cpp  intcode.cpp
txt/: input.day5.txt
